preview image, icon flickering fix, no WIP!

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -132,7 +132,7 @@ h3 {
 }
 
 p {
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 300;
     line-height: 24px;
     max-width: 450px;
@@ -146,9 +146,10 @@ img {
 }
 
 i {
+    position: relative;
     margin-right: 15px;
     color: #000;
-    opacity: 0.3
+    opacity: 0.3;
 }
 
 i:hover{
@@ -170,7 +171,6 @@ div.secondary-section {
 div.icons {
     margin-top: 50px;
 }
-
 
 @media only screen and (min-width: 64.063em) {
 
